# kafka-face

./: .gitignore  pyproject.toml  setup.cfg
demo/: consumer.py  producer.py  streams.py
producer/: face_recognition.py  raw_image_producer.py
stream/: face_recognition.py
