[tool.poetry]
name = "kafka-face"
version = "0.1.0"
description = ""
authors = ["Yeojin Kim <yeojin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
confluent-kafka = "^1.7.0"
opencv-python = "^4.5.3"
dlib = "^19.22.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
